# sesame-app

./: .env  README.md  docker-compose.yaml
client_app/: .gitignore  tree.txt  (+2 more)
secured-api/: .env  .env.dist  .gitignore  Cargo.toml  data.sql  db.sql
secured-api/.github/workflows/: ci.yml
secured-api/migrations/2024-06-30-095319_create_users_table/: up.sql
secured-api/migrations/2024-07-15-151427_create_defaults/: down.sql  up.sql
secured-api/migrations/2024-07-15-230018_create_locations_table/: up.sql
secured-api/migrations/2024-07-16-103610_create_emplacement/: down.sql  up.sql
secured-api/migrations/2024-07-16-104227_create_level/: down.sql  up.sql
secured-api/migrations/2024-07-16-113441_create_zone/: up.sql
secured-api/migrations/2024-07-16-114807_create_toilet/: down.sql  up.sql
secured-api/migrations/2024-07-16-115254_create_intervention/: down.sql  up.sql
secured-api/migrations/2024-07-17-085941_create_commentaire/: up.sql
secured-api/src/: main.rs  schema.rs
secured-api/src/controllers/: comment_controller.rs  intervention_controller.rs  location_controller.rs  mod.rs  toilet_controller.rs  user_controller.rs  zone_controller.rs
secured-api/src/models/: comment.rs  defaults.rs  intervention.rs  level.rs  location.rs  mod.rs  toilet.rs  user.rs  zone.rs
secured-api/src/repository/: user_repository.rs
secured-api/src/routes/: user_routes.rs
secured-api/src/services/: comment_service.rs  defaults_service.rs  intervention_service.rs  location_service.rs  mod.rs  toilet_service.rs  user_service.rs  zone_service.rs
secured-api/src/utils/: app_state.rs  db_pool.rs  error_response.rs  log.rs  mod.rs  pagination_param.rs
secured-api/src/web_socket_logic/: web_socket.rs
(+43 files in other folders)
